chat_Bot last commit

--- a/static/front.html
+++ b/static/front.html
@@ -326,7 +326,7 @@
             showTypingIndicator();
 
             try {
-                const response = await fetch('http://localhost:5000/api/ask', {
+                const response = await fetch('http://127.0.0.1:5000/api/ask', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -334,7 +334,7 @@
                     body: JSON.stringify({
                         question: question,
                         history: chatHistory.slice(0, -1),
-                        doc_path: "C:\\Users\\George\\Downloads\\ai based\\YouLearnt Ai chat robot.docx"
+                        doc_path: "YouLearnt Ai chat robot.docx"
                     })
                 });
 
